[tool.poetry]
name = "python-dou-scrapper"
version = "0.1.0"
description = ""
authors = ["pho-souza <pedroka196@gmail.com>"]
readme = "README.md"
packages = [{include = "python_dou_scrapper"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
